--- a/foundation/automat/arithmetic/generator/template/configuration/standardoneargument.json.jinja2
+++ b/foundation/automat/arithmetic/generator/template/configuration/standardoneargument.json.jinja2
@@ -6,20 +6,21 @@
   "init_variableName_key1": {"full": "key1", "code": "@vk1@"},
   "init_variableName_replacementDictionary": {"full": "replacementDictionary", "code": "@vrD@"},
   "init_variableName_totalNodeCount": {"full": "totalNodeCount", "code": "@vtN@"},
-  "init_variableName_newKey": {"full": "newKey", "code": "@vnK@"},
-  "init_variableName_newValue": {"full": "newValue", "code": "@vnV@"},
+  "init_string_newKey": {"full": "newKey", "code": "@vnK@"},
+  "init_string_newValue": {"full": "newValue", "code": "@vnV@"},
+  "imports":{{imports}},
   "return_reverse": {
     "reversedAst": [
       {
         "@vk0@": {
           "@vnK@": "@vk0@",
-          "@vnV@": ["@item_1_0@", ["@fN_{{reverse_function_name}}@", "@id_0_1@"]]
+          "@vnV@": ["@item_1_0@", ["@cN_{{reverse_class_name}}@.@vfN@", "@id_0_1@"]]
         },
         "@vk1@": {
-          "@vnK@": ["@fN_{{reverse_function_name}}@", "@idk_1@"],
+          "@vnK@": ["@cN_{{reverse_class_name}}@.@vfN@", "@idk_1@"],
           "@vnV@": ["@item_0_0@"]
         },
-      "functionCountAdded": {"@fN_{{reverse_function_name}}": 1, "@fN@": -1},
+      "functionCountAdded": {"@cN_{{reverse_class_name}}@.@vfN@": 1, "@vfN@": -1},
       "primitiveCountAdded": 0,
       "totalNodeCountAdded": 0
       }
