cleared some indentation/import_problems with generated trig functions

--- a/foundation/automat/arithmetic/generator/template/configuration/standardoneargument.json.jinja2
+++ b/foundation/automat/arithmetic/generator/template/configuration/standardoneargument.json.jinja2
@@ -11,6 +11,7 @@
   "init_string_newValue": {"full": "newValue", "code": "@vnV@"},
   "imports":{{imports}},
   "return_reverse": {
+    "imports":{{reverse_imports}},
     "reversedAst": [
       {
         "@vk0@": {
