--- a/foundation/automat/arithmetic/generator/template/standard/function/function_reverse.py.jinja2
+++ b/foundation/automat/arithmetic/generator/template/standard/function/function_reverse.py.jinja2
@@ -34,4 +34,7 @@
                 {{vKey1}} = key
         if {{vKey0}} is None or {{vKey1}} is None:
             raise Exception("{{vReplacementDict}} not according to format")
+        {% for import in imports %}
+        {{import}}
+        {% endfor %}
         return {{reversedDict}}, {{functionCountAdded}}, {{primitivesCountAdded}}, {{totalNodeCountAdded}}
